--- a/src/app/components/ticket-detail/ticket-detail.component.scss
+++ b/src/app/components/ticket-detail/ticket-detail.component.scss
@@ -17,5 +17,6 @@
     width: 100%;
     min-height: 5em;
     overflow: auto;
-    white-space: pre;
+    white-space: pre-wrap;
+    word-break: break-word;
 }
