login hides top and left sidebars

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,7 @@
-<div class="flex justify-center items-center h-[60%]">
+<div class="flex justify-center items-center flex-col h-[90vh]">
+    
+       <span class="mb-10 flex items-center gap-4  text-4xl">Mbug tracker <mat-icon class="text-[#ff4081]" >pest_control</mat-icon> </span>
+    
     <div class=" shadow-lg rounded bg-white p-4 min-w-[40%]">
         <form class="flex flex-col" *ngIf="!isResetingPassword">
             <p class="text-xl">{{ isSigning ? "Create new account"  : "Log in" }}</p>
