--- a/src/app/components/ticket-detail/ticket-detail.component.html
+++ b/src/app/components/ticket-detail/ticket-detail.component.html
@@ -147,7 +147,7 @@
 
                             {{ update.timestamp ? formatDate(update.timestamp) : ""}}
 
-                            <mat-icon>  {{ update.comment ? "chat" : "edit"}}</mat-icon>
+                            <mat-icon>  {{ update.comment ? "chat" : "edit_note"}}</mat-icon>
 
                         </mat-panel-description>
 
