--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,17 @@
 
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" *ngIf="loginPage">
   <div class="flex w-[100%] justify-between">
     <span>MKBugs</span>
     <button mat-icon-button routerLink="/login" > <mat-icon>account_circle</mat-icon> </button>
   </div>
 </mat-toolbar>
 
-<mat-sidenav-container class="mainContainer">
-  <mat-sidenav class="sideBar" mode="side" opened>
-    <nav>
-      <a class="items-center" mat-button style="display: flex;" *ngFor="let link of links" 
-      [routerLink]="link.url" routerLinkActive="text-[#ff4182]"> 
-      <mat-icon>{{link.icon}}</mat-icon>
+<mat-sidenav-container  class="mainContainer">
+    <mat-sidenav  class="sideBar" mode="side" [opened]="loginPage">
+      <nav>
+        <a class="items-center" mat-button style="display: flex;" *ngFor="let link of links" 
+        [routerLink]="link.url" routerLinkActive="text-[#ff4182]"> 
+        <mat-icon>{{link.icon}}</mat-icon>
         {{link.name}}
       </a>
     </nav>
