--- a/src/app/components/project-managment/project-detail/project-detail.component.html
+++ b/src/app/components/project-managment/project-detail/project-detail.component.html
@@ -39,7 +39,7 @@
                     </mat-form-field>  
                   </td>
                 </ng-container>
-
+                
                 <ng-container matColumnDef="remove">
                   <th mat-header-cell *matHeaderCellDef> </th>
                   <td mat-cell *matCellDef="let element">
@@ -51,8 +51,6 @@
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
               </table>
             </mat-card-content>
-
-            
 
             <mat-card-actions>
               <div > 
@@ -80,6 +78,9 @@
       <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
           Please enter a valid email address
       </mat-error>
+      <mat-error *ngIf="emailFormControl.hasError('mailmatch')">
+        Cant't invite project member
+    </mat-error>
       <mat-error *ngIf="emailFormControl.hasError('required')">
           Email is <strong>required</strong>
       </mat-error>
@@ -87,6 +88,6 @@
   </p>
   <mat-dialog-actions align="end">
     <button mat-button matDialogClose>Close</button>
-    <button mat-raised-button color="accent" [disabled]="!emailFormControl.valid" (click)="sendEmail.emit({email:emailFormControl.value, project:currentProject?.id})" matDialogClose>Send</button>
+    <button mat-raised-button color="accent" [disabled]="!emailFormControl.valid" (click)="sendEmail.emit({email:emailFormControl.value, projectName:currentProject?.title, projectId: currentProject?.id})" matDialogClose>Send</button>
   </mat-dialog-actions>
 </ng-template>
