--- a/src/app/components/project-managment/project-detail/project-detail.component.html
+++ b/src/app/components/project-managment/project-detail/project-detail.component.html
@@ -31,7 +31,7 @@
                   <th mat-header-cell *matHeaderCellDef> Rol </th>
                   <td mat-cell *matCellDef="let element">
                     <mat-form-field  >
-                      <mat-select [disabled]="viewMode" [(value)]="element.role" >
+                      <mat-select (valueChange)="changeRole($event, element)" [disabled]="viewMode" [(value)]="element.role" >
                         <mat-option *ngFor="let roles of roles" [value]="roles.value">
                           {{roles.viewValue}}
                         </mat-option>
@@ -41,9 +41,9 @@
                 </ng-container>
                 
                 <ng-container matColumnDef="remove">
-                  <th mat-header-cell *matHeaderCellDef> </th>
+                  <th mat-header-cell *matHeaderCellDef> Remove </th>
                   <td mat-cell *matCellDef="let element">
-                      <button mat-button color="warn" (click)="removeMember()" ><mat-icon>person_remove</mat-icon></button>
+                    <mat-checkbox (change)="removeMember($event, element)" class="example-margin"></mat-checkbox>
                   </td>
                 </ng-container>
 
@@ -54,8 +54,9 @@
 
             <mat-card-actions>
               <div > 
+                <button  mat-button color="accent" (click)="addMemeber(memberDialog)">Invite new users</button> 
                 <button  mat-button color="accent" (click)="editMode()">Manage users</button> 
-                <button  mat-button color="accent" (click)="addMemeber(memberDialog)">Invite new people</button> 
+                <button *ngIf="!viewMode" class="float-right" mat-raised-button color="primary" (click)="saveChanges()" >Save <mat-icon>save</mat-icon></button>
               </div>
             </mat-card-actions >
           </mat-card>
