--- a/src/app/components/project-managment/project-managment.component.html
+++ b/src/app/components/project-managment/project-managment.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-row p-8 gap-8" *ngIf="(projects$ | async)?.length; else spinner">
     <app-project-card [projects]="projects$ | async" class="basis-[33%]" (openProject)="selectProject($event)" ></app-project-card>
-    <app-project-detail class="basis-[66%]"  [currentUser]="currentUser" (sendEmail)="sendEmail($event)" [selectedProject]="selectedProject"></app-project-detail>
+    <app-project-detail class="basis-[66%]"  [currentUser]="currentUser" (editUsers)="editUsers($event)" (sendEmail)="sendEmail($event)" [selectedProject]="selectedProject"></app-project-detail>
 </div>
 
 
