Project edit and project form validation

--- a/src/app/components/project-managment/project-card/project-card.component.html
+++ b/src/app/components/project-managment/project-card/project-card.component.html
@@ -15,9 +15,7 @@
       </mat-card-content>
       
       <mat-card-actions>
-          <button color="accent" mat-button>EDIT</button>
-        
-          
+          <button color="accent" (click)="editProject(project); $event.stopImmediatePropagation()" mat-button>EDIT</button>
       </mat-card-actions>
     
     </mat-card>
