--- a/src/app/components/project-managment/project-detail/project-detail.component.html
+++ b/src/app/components/project-managment/project-detail/project-detail.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col gap-8 sticky top-8" *ngIf="currentProject; else hint">
 
-    
+
         <mat-card class="example-card">
             <mat-card-content>
               <h2>{{currentProject.title}}</h2>
@@ -22,14 +22,14 @@
 
                 <ng-container matColumnDef="name">
                   <th mat-header-cell *matHeaderCellDef> Email </th>
-                  <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+                  <td mat-cell *matCellDef="let element"  [ngClass]="{'bg-[#4d585a12]' : element.email == currentUser.email}"> {{element.email}} </td>
                 </ng-container>
               
                 <ng-container matColumnDef="role">
                   <th mat-header-cell *matHeaderCellDef> Rol </th>
-                  <td mat-cell *matCellDef="let element">
-                    <mat-form-field  >
-                      <mat-select (valueChange)="changeRole($event, element)" [disabled]="viewMode" [(value)]="element.role" >
+                  <td mat-cell *matCellDef="let element" [ngClass]="{'bg-[#4d585a12]' : element.email == currentUser.email}">
+                    <mat-form-field>
+                      <mat-select (valueChange)="changeRole($event, element)" [disabled]="viewMode || (element.email == currentUser.email) " [(value)]="element.role" >
                         <mat-option *ngFor="let roles of roles" [value]="roles.value">
                           {{roles.viewValue}}
                         </mat-option>
@@ -40,8 +40,8 @@
                 
                 <ng-container matColumnDef="remove">
                   <th mat-header-cell *matHeaderCellDef> Remove </th>
-                  <td mat-cell *matCellDef="let element">
-                    <mat-checkbox (change)="removeMember($event, element)" class="example-margin"></mat-checkbox>
+                  <td mat-cell *matCellDef="let element" [ngClass]="{'bg-[#4d585a12] text-[#242222a6]' : element.email == currentUser.email}">
+                    <mat-checkbox [disabled]="(element.email == currentUser.email)" *ngIf="element.email != currentUser.email" (change)="removeMember($event, element)" class="example-margin"></mat-checkbox>
                   </td>
                 </ng-container>
 
