--- a/src/app/components/project-managment/project-card/project-card.component.html
+++ b/src/app/components/project-managment/project-card/project-card.component.html
@@ -15,7 +15,7 @@
       </mat-card-content>
       
       <mat-card-actions>
-          <button color="accent" (click)="editProject(project); $event.stopImmediatePropagation()" mat-button>EDIT</button>
+          <button color="accent" *ngIf="checkRole(project.users)" (click)="editProject(project); $event.stopImmediatePropagation()" mat-button>EDIT</button>
       </mat-card-actions>
     
     </mat-card>
