--- a/src/app/components/project-managment/project-detail/project-detail.component.html
+++ b/src/app/components/project-managment/project-detail/project-detail.component.html
@@ -29,7 +29,7 @@
                   <th mat-header-cell *matHeaderCellDef> Rol </th>
                   <td mat-cell *matCellDef="let element" [ngClass]="{'bg-[#4d585a12]' : element.email == currentUser.email}">
                     <mat-form-field>
-                      <mat-select (valueChange)="changeRole($event, element)" [disabled]="viewMode || (element.email == currentUser.email) " [(value)]="element.role" >
+                      <mat-select (valueChange)="changeRole($event, element)" [disabled]="viewMode || (element.email == currentUser.email) || (getUserRole() == 2 && (element.role == 3 || element.role == 2) )" [(value)]="element.role" >
                         <mat-option *ngFor="let roles of roles" [value]="roles.value">
                           {{roles.viewValue}}
                         </mat-option>
@@ -37,11 +37,11 @@
                     </mat-form-field>  
                   </td>
                 </ng-container>
-                
+              
                 <ng-container matColumnDef="remove">
                   <th mat-header-cell *matHeaderCellDef> Remove </th>
                   <td mat-cell *matCellDef="let element" [ngClass]="{'bg-[#4d585a12] text-[#242222a6]' : element.email == currentUser.email}">
-                    <mat-checkbox [disabled]="(element.email == currentUser.email)" *ngIf="element.email != currentUser.email" (change)="removeMember($event, element)" class="example-margin"></mat-checkbox>
+                    <mat-checkbox [disabled]="(element.email == currentUser.email) || (getUserRole() == 2 && (element.role == 3 || element.role == 2) )" *ngIf="element.email != currentUser.email" (change)="removeMember($event, element)" class="example-margin"></mat-checkbox>
                   </td>
                 </ng-container>
 
@@ -49,17 +49,17 @@
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
               </table>
             </mat-card-content>
-
             <mat-card-actions>
               <div > 
-                <button  mat-button color="accent" (click)="addMemeber(memberDialog)">Invite new users</button> 
-                <button  mat-button color="accent" (click)="editMode()">Manage users</button> 
+                <span *ngIf="(getUserRole() == 3 || getUserRole() == 2)">
+                  <button  mat-button color="accent" *ngIf="currentProject?.users?.length > 1" (click)="editMode()">Edit users</button> 
+                  <button  mat-button color="accent" (click)="addMemeber(memberDialog)"><mat-icon>group_add</mat-icon></button> 
+                </span>
                 <button *ngIf="!viewMode" class="float-right" mat-raised-button color="primary" (click)="saveChanges()" >Save <mat-icon>save</mat-icon></button>
               </div>
             </mat-card-actions >
           </mat-card>
   
-
 </div>
 
 <ng-template #hint>
