--- a/src/app/components/ticket-detail/ticket-detail.component.html
+++ b/src/app/components/ticket-detail/ticket-detail.component.html
@@ -100,9 +100,13 @@
                 <p class="flex justify-between">    <span class="font-medium"> Reporter</span> {{ticket.reporter.substr(0,  ticket.reporter.indexOf('@')) }}</p>
             </div>
         </div>
+        {{getLoggedRole() == 0 }}
+        {{ getLoggedRole() == 0 && loggedUser?.email == ticket.assigned}}
+        {{loggedUser?.email}}
+        {{ticket.assigned }}
         <div class="flex justify-end gap-4 m-3" >
             <button mat-raised-button *ngIf="editMode" [disabled]="ticket.name.length == 0" (click)="saveTicketChanges(ticket)"> Save changes <mat-icon>save</mat-icon></button>
-            <button mat-raised-button color="accent" *ngIf="getLoggedRole() != 4" (click)="editMode = !editMode" > Edit <mat-icon>{{editMode? "cancel" : "edit"}}</mat-icon></button>
+            <button mat-raised-button color="accent" *ngIf="getLoggedRole() != 4 && ((getLoggedRole() == 0 && loggedUser?.email == ticket.assigned) || getLoggedRole() != 0)" (click)="editMode = !editMode" > Edit <mat-icon>{{editMode? "cancel" : "edit"}}</mat-icon></button>
         </div>
     </div>
 
