--- a/src/app/components/project-managment/project-managment.component.html
+++ b/src/app/components/project-managment/project-managment.component.html
@@ -1,7 +1,7 @@
 
 
         <div class="flex flex-row p-8 gap-8" *ngIf="(projects$ | async) && (projects$ | async) != '0proyects' ; else spinner">
-            <app-project-card [currentUser]="currentUser"  [projects]="projects$ | async" class="basis-[33%]" (editedProject)="editProject($event)" (openProject)="selectProject($event)" ></app-project-card>
+            <app-project-card [currentUser]="currentUser"  [projects]="projects$ | async" class="basis-[33%] max-w-[33%]" (editedProject)="editProject($event)" (openProject)="selectProject($event)" ></app-project-card>
             <app-project-detail class="basis-[66%]"  [currentUser]="currentUser" (editUsers)="editUsers($event)" (sendEmail)="sendEmail($event)" [selectedProject]="selectedProject"></app-project-detail>
         </div>
 
@@ -17,6 +17,6 @@
         </ng-template>
 
         <div class="flex justify-center h-[70vh] items-center" *ngIf="(projects$ | async) == '0proyects'">
-            <p class="text-2xl">You dont manage any proyects</p>
+            <p class="text-2xl">You dont participate in any proyects</p>
         </div>
 
