project status progress bar

--- a/src/app/components/project-managment/project-card/project-card.component.html
+++ b/src/app/components/project-managment/project-card/project-card.component.html
@@ -7,7 +7,7 @@
         
         <mat-progress-bar
         color="accent"
-        [value]="getCompletionProgress(project?.tickets)">
+        [value]="getCompletionProgress(project?.ticketStatus)">
     </mat-progress-bar>
     <div class="mt-4">
       {{getParticipants(project.users)}}
