--- a/src/app/components/project-managment/project-detail/project-detail.component.html
+++ b/src/app/components/project-managment/project-detail/project-detail.component.html
@@ -15,7 +15,7 @@
                   </span> 
                 </span>
               </div>
-              <button mat-button style="margin-top: 6px;" color="accent" (click)="hideHistory = !hideHistory">View more <mat-icon>{{hideHistory? "expand_less" : "expand_more"}}</mat-icon> </button>
+              <button mat-button style="margin-top: 6px;" (click)="hideHistory = !hideHistory">View more <mat-icon>{{hideHistory? "expand_less" : "expand_more"}}</mat-icon> </button>
             </mat-card-content>
             <mat-card-actions>
               <div> 
